# data_engineer_test

./: README.md  config.py  create_connect.py  create_tables.py  pyproject.toml  requirements.txt  rubl_every_day.py  ruble_exchange_rate_per_year.py  ruble_for_a_few_days.py  utils.py
core/ddl/: core_exchange_rates.sql  core_languages.sql  core_source_type.sql
creating and populating tables/: create_tables.py  populating_tables.py
data_mart/: create_dim_tables.py
dm/ddl/: currencies_en.sql  currencies_ru.sql
parsing_and_saving_to_db/: rubl_every_day.py  ruble_exchange_rate_per_year.py  usd_every_day.py  usd_exchange_rate_per_year.py  utilities.py
raw/: crb_client.py  currencylayer_client.py
save_data_to_core/: from_stage_to_core.py
save_data_to_core_from_staging/: from_stage_to_core.py
staging/crb/: crb_client.py
staging/currencylayer/: currencylayer_client.py
staging/ddl/: raw_cb_currencies.sql  raw_currencylayer_currencies.sql
test/creating and populating tables/: create_tables.py
tmp/parsing_and_saving_to_db/: rubl_every_day.py  usd_exchange_rate_per_year.py
utils/: logger.py  mysql.py
